# SiteTemplateCodex

./: .gitignore  DOCKER.md  README.md  como-executar-servidores.txt  docker-compose.yml  iniciar.bat
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  make_admin.py  pyproject.toml  rename.py  seed.py  update_products.py
backend/alembic/: env.py
backend/alembic/versions/: 1d3c8b5a2f44_add_user_addresses.py  26efa041cb09_initial.py  5f4d1e9b8a10_add_product_image_urls.py  7b6e4a21c9d8_add_custom_request_type.py  8ca0e11a22c1_add_reviews.py  9f1d2a7c4b30_add_order_support_request.py  c14b3f2d7a91_add_store_links.py
backend/src/: __init__.py  main.py
backend/src/core/: config.py  dependencies.py  exceptions.py  security.py
backend/src/models/: address.py  cart.py  coupon.py  custom_request.py  db.py  message.py  notice.py  order.py  product.py  review.py  store_link.py  user.py
backend/src/repositories/: address_repo.py  cart_repo.py  coupon_repo.py  custom_request_repo.py  message_repo.py  order_repo.py  product_repo.py  review_repo.py  user_repo.py
backend/src/routers/: admin_router.py  auth_router.py  cart_router.py  coupon_router.py  custom_request_router.py  message_router.py  order_router.py  product_router.py  review_router.py  shipping_router.py  store_router.py  user_router.py
backend/src/schemas/: address.py  auth.py  cart.py  coupon.py  custom_request.py  message.py  notice.py  order.py  (+5 more)
backend/tests/: conftest.py  test_admin_links_and_orders.py  test_auth.py  test_checkout_flow.py  test_shipping_and_payment.py  test_upload_service.py
(+55 files in other folders)
