[project]
name = "lunart-backend"
version = "1.0.0"
description = "Backend API for Lunart artisanal e-commerce"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",
    "pyjwt>=2.9.0",
    "bcrypt>=4.2.0",
    "pydantic-settings>=2.5.0",
    "pydantic-br>=1.0.0",
    "alembic>=1.14.0",
    "python-multipart>=0.0.12",
    "cloudinary>=1.44.2",
    "asyncpg>=0.31.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]
ignore = ["ANN001", "ANN201", "ANN002", "ANN003", "ANN204", "B008", "E501"]
